# K3s-Flux

./: .checkov.yaml  .config.sample.env  .devfile.yaml  .dockerignore  .envrc  .flux.sample.env  .gitattributes  .gitignore  .gitlab-ci.yml  .gitlabbot.yaml  .gitleaks.toml  .gitleaksignore  .krewfile  .pre-commit-config.yaml  .python-version  .sops.yaml  .sourceignore  README.md  Taskfile.yaml  Taskfile.yml  ansible.cfg  aqua.yaml  poetry.toml  pyproject.toml  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.devcontainer/ci/: .aqua.yaml  Dockerfile  devcontainer.json
.gitlab/: .gitlab-webide.yml  CODEOWNERS  label.yaml  renovate.json5
.gitlab/ci/: devcontainer.yaml  flux-local.yaml  sonarqube.yaml
.gitlab/linters/: .ansible-lint.yaml  .yamllint.yaml
.gitlab/renovate/: changelogs.json5  commitMessage.json5  customManagers.json5  grafanaDashboards.json5  groups.json5  labels.json5  packageRules.json5  semanticCommits.json5
.gitlab/scripts/: add-all-helm-repo.sh  flux-local-build.sh  flux-local-diff.sh  flux-local-test.sh  helmReleaseDiff.mjs  kubeconform.sh  validate.sh
.taskfiles/: AgeTasks.yaml  AgeTasks.yml  AnsibleTasks.yaml  AnsibleTasks.yml  ClusterTasks.yaml  ClusterTasks.yml  DebugTasks.yaml  FluxTasks.yaml  PrecommitTasks.yaml  TemplateTasks.yml  ToolsTasks.yaml  ToolsTasks.yml  VagrantTasks.yaml
.taskfiles/backup/: Taskfile.yaml
.taskfiles/bootstrap/: Taskfile.yaml
.taskfiles/debug/: Taskfile.yaml
docs/: .gitignore  books.toml
infrastructure/: .envrc
talos/: talconfig.yaml  talenv.yaml  talsecret.sops.yaml
(+2321 files in other folders)
