[project]
name = "talos-flux"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
]

[dependency-groups]
linters = [
  "prettier==0.0.7",
  "yamllint==1.38.0",
]

[tool.uv]
package = false

default-groups = [ 'linters' ]
