[project]
name = "k3s-flux"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "flux-local>=6.0.2",
]

[dependency-groups]
linters = [
    "prettier>=0.0.7",
    "pyproject-fmt>=2.5",
    "yamllint>=1.35.1",
]
ansible = [
    "ansible==11.13.0",
    "ansible-inventory-grapher>=2.6",
    "jmespath>=1.0.1",
    "netaddr>=1.3",
]

[tool.uv]
package = false

default-groups = ['ansible', 'linters']
